--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -44,14 +44,20 @@ jobs:
           echo "Pre-trigger check complete."
           
           # Trigger the scraper-runner workflow
-          curl -X POST \
-            -H "Authorization: Bearer ${{ secrets.PAT_GITHUB }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/iamcristye/Tieba-Talk-Public/actions/workflows/scraper-runner.yml/dispatches \
-            -d '{"ref":"main"}'
+          # curl -X POST \
+          #   -H "Authorization: Bearer ${{ secrets.PAT_GITHUB }}" \
+          #   -H "Accept: application/vnd.github.v3+json" \
+          #   https://api.github.com/repos/iamcristye/Tieba-Talk-Public/actions/workflows/scraper-runner.yml/dispatches \
+          #   -d '{"ref":"main"}'
           
+          curl ${{ secrets.WORKERS_URL }}
+          # echo ${ WORKERS_URL }
+          # echo ${{ secrets.WORKERS_URL }}"
+
           echo "Triggered scraper-runner workflow. Sleeping 600s..."
           sleep 600
         done
         
         echo "Hourly loop completed."
+      env:
+          WORKERS_URL: ${{ secrets.WORKERS_URL }}
