--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -44,13 +44,13 @@ jobs:
           echo "Pre-trigger check complete."
           
           # Trigger the scraper-runner workflow
-          # curl -X POST \
-          #   -H "Authorization: Bearer ${{ secrets.PAT_GITHUB }}" \
-          #   -H "Accept: application/vnd.github.v3+json" \
-          #   https://api.github.com/repos/iamcristye/Tieba-Talk-Public/actions/workflows/scraper-runner.yml/dispatches \
-          #   -d '{"ref":"main"}'
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.PAT_GITHUB }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/iamcristye/Tieba-Talk-Public/actions/workflows/scraper-runner.yml/dispatches \
+            -d '{"ref":"main"}'
           
-          curl ${{ secrets.WORKERS_URL }}
+          # curl ${{ secrets.WORKERS_URL }}
           # echo ${ WORKERS_URL }
           # echo ${{ secrets.WORKERS_URL }}"
 
